<resources>
    <string-array name="grades">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="app_name">uldbsMarket</string>
    
    <string name="profile">Профиль</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="chats">Чаты</string>

    <string name="request_err">Error! Cannot connect to service.</string>
    <string name="wrong_login_data">Неверный логин или пароль</string>
    <string name="success">Успешно</string>

    <string name="no_data">Ошибка. Нет данных</string>

    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="pass">Пароль</string>
    <string name="confirmpass">Подтвердите пароль</string>
    <string name="phone">Телефон</string>
    <string name="birthdate">Дата рождения</string>

    <string name="password_dont_match">Пароли не совпадают</string>

    <string name="missing_data">Error! Some data have missed</string>
    <string name="error">Ошибка</string>

    <string name="your_chats">Ваши чаты</string>
    <string name="not_authorized">Вы не авторизованы</string>

    <string name="chatting_with">Чат с</string>

    <string name="sign_out">Выйти из системы</string>
    <string name="submit">Подтвердить</string>
    <string name="profile_">Личный профиль</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="enter">Вход</string>
    <string name="register">Создать аккаунт</string>
    <string name="reg_suggest">У вас нет аккаунта?</string>
    <string name="log_suggest">Уже зарегистрированы?</string>
    <string name="do_login">Войти в систему</string>

    <string name="grades">Самые оцененные</string>
    <string name="orders">Самые популярные</string>

    <string name="good_name">Имя товара</string>
    <string name="price">Цена:</string>
    <string name="price_units">RUB</string>

    <string name="feedback_for_this">Отзывы для данного товара</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="leave_your_feedback">Оставьте ваш отзыв...</string>
    <string name="grade">Выберите оценку</string>
    <string name="leave_your_feedback2">Оставьте ваш отзыв</string>

    <string name="stayed_grade">Оценка:</string>

    <string name="publish">Отправить</string>

    <string name="message">Сообщение...</string>
    <string name="total_price">Итого цена:</string>
    <string name="to_payment">К оплате</string>

    <string name="response_empty_error">Response is empty</string>

    <string name="personal">Персональные</string>
    <string name="shop">Магазин</string>
    <string name="moderator">Менеджер</string>
    <string name="admin">Администратор</string>
    <string name="map">Наше местоположение</string>
    <string name="manager_menu">Меню менеджера</string>
    <string name="chatting_with_cl">Чаты с клиентами</string>
    <string name="admin_menu">Админ меню</string>
    <string name="catalog_control">Управление каталогом</string>
    <string name="my_orders">Мои заказы</string>

    <string name="delete_cart">Убрать все</string>
    <string name="empty_cart">Ваша корзина пуста</string>
    <string name="order_number">Заказ №</string>
    <string name="goods">Товары этого заказа:</string>
    <string name="manager_for_order">Ответственный менеджер</string>
    <string name="orders_details">Детали заказа</string>
    <string name="orders_details2">Детали заказа</string>
    <string name="order_status">Состояние заказа</string>
    <string name="crate_new_chat_offer">Если у вас есть вопросы, вы можете связаться с менеджером</string>
    <string name="start_chatting">Начать чат</string>
    <string name="you_should_order_good">Вы должны приобрести товар перед выставлением оценки</string>

    <string name="to_chat_with_manager">Связаться с менеджером в чате</string>
    <string name="welcome">ULDBS market</string>
    <string name="done">Выполнено</string>
    <string name="user_details">Детали пользователя</string>
    <string name="contact_the_user">Связаться с пользователем</string>

    <string name="hide_finished_orders">Скрыть завершенные</string>
    <string name="show_finished_orders">Показать завершенные</string>
    <string name="set_up_status">Установить статус</string>
    <string name="confirm_the_status">Подтвердить статус</string>

    <string name="shop_location">Местоположение магазина "ул. Московская, 30"</string>
    <string name="submit_order">Подтвердить заказ</string>
    <string name="payment_data">Данные оплаты</string>
    <string name="total_goods">Всего товаров:</string>
    <style name="payment_data">Данные оплаты</style>

    <string name="info_about_manager"> Имя менеджера: %1$s \n
        Email менеджера: %2$s\n
        Телефон менеджера: %3$s\n
    </string>

    <string name="info_about_client"> Имя клиента: %1$s \n
        Email клиента: %2$s\n
        Телефон клиента: %3$s\n
    </string>

    <string name="profile_info">
        Имя: %1$s\n
        Логин: %2$s\n
        Телефон: %3$s\n\
        Дата рождения: %4$s\n\n
        Аккаунт: %5$s
    </string>

</resources>