<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/personal">
        <menu>
            <item android:id="@+id/nav_login_fragment"
                android:title="@string/profile"
                android:icon="@drawable/ic_bottom_nav_profile" />
            <item android:id="@+id/nav_basket_fragment"
                android:title="@string/basket"
                android:icon="@drawable/ic_bottom_nav_basket" />
            <item android:id="@+id/nav_chats_fragment"
                android:title="@string/chats"
                android:icon="@drawable/ic_bottom_nav_chat" />
        </menu>
    </item>
    <item android:title="@string/shop">
        <menu>
            <item android:id="@+id/nav_catalog_fragment"
                android:title="@string/catalog"
                android:icon="@drawable/ic_bottom_nav_catalog" />
            <item android:id="@+id/nav_map_fragment"
                android:title="@string/map"
                android:icon="@drawable/ic_map_marker" />
        </menu>
    </item>
    <item android:title="@string/moderator">

    </item>
    <item android:title="@string/admin">

    </item>

</menu>