<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/order_number"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/order_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="3"
                android:text="cb0fd1ee-c228-11eb-8529-0242ac130003"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/order_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/goods"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:id="@+id/goods_contaier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        </LinearLayout>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/orders_details"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/order_status"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/order_status_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="3"
                android:text="Finished"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/manager_for_order"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/manager_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp" />

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/to_chat_with_manager">
        </Button>

    </LinearLayout>
</androidx.cardview.widget.CardView>