<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pass"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmpass"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextTextPassword3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/textViewBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birthdate"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/editTextBirthDate"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:textSize="16dp" />

                        <Button
                            android:id="@+id/buttonOpenPicker"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="..."></Button>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/submit" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/log_suggest"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/do_login" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>